# cloud/api/internal/server/server.go
@@ -83,6 +83,9 @@ func routes() []route {
 		{"GET", "/v1/images", "DescribeImages", anyCredential, (*Server).describeImages},
 		{"POST", "/v1/images", "ImportImage", anyCredential, (*Server).importImage},
 		{"DELETE", "/v1/images/{image_id}", "DeleteImage", anyCredential, (*Server).deleteImage},
+		{"GET", "/v1/isos", "DescribeISOs", anyCredential, (*Server).describeISOs},
+		{"POST", "/v1/isos", "ImportISO", anyCredential, (*Server).importISO},
+		{"DELETE", "/v1/isos/{iso_id}", "DeleteISO", anyCredential, (*Server).deleteISO},
 		{"GET", "/v1/instance-types", "DescribeInstanceTypes", anyCredential, (*Server).describeInstanceTypes},
 		{"GET", "/v1/capacity", "DescribeCapacity", anyCredential, (*Server).describeCapacity},
 		{"GET", "/v1/limits", "DescribeLimits", anyCredential, (*Server).describeLimits},
